docs: refactor DatePicker docs

--- a/website/sdds-crm-docs/docs/components/DatePicker.mdx
+++ b/website/sdds-crm-docs/docs/components/DatePicker.mdx
@@ -9,37 +9,177 @@ import TabItem from '@theme/TabItem';
 
 # DatePicker
 <Description name="DatePicker" />
-<PropsTable name="DatePicker" exclude={['css']} />
 
-## Использование
-Компонент `DatePicker` представляет собой поле ввода даты с выпадающим календарем.
+### Быстрый старт
 
-### Размер компонента
-Размер `DatePicker` задаётся с помощью свойства `size`.
-Возможные значения свойства: `"l"`, `"m"`, `"s"`, `"xs"`.
+<Tabs>
+    <TabItem value="uncontrolled" label="Uncontrolled" default>
+        ```tsx live
+        import React, {useState} from 'react';
+        import { DatePicker } from '@salutejs/sdds-crm';
+        import { IconDone } from '@salutejs/plasma-icons';
 
-```tsx live
-import React from 'react';
-import { DatePicker } from '@salutejs/sdds-crm';
-import { IconDone } from '@salutejs/plasma-icons';
+        export function App() {
+            const [dateValue, setDate] = useState<Date | string | undefined>(new Date());
+            const [originalDateValue, setOriginalDate] = useState<Date | string | null | undefined>(new Date());
+            const [isoDateValue, setIsoDate] = useState<string | undefined>(new Date().toISOString());
 
-export function App() {
-    return (
-        <div>
-            <DatePicker
-                label="Лейбл"
-                leftHelper="Подсказка к полю"
-                placeholder="Введите дату"
-                contentRight={<IconDone size="s" />}
-                size="l"
-                usePortal
-            />
-        </div>
-    );
-}
-```
+            const handleChangeValue = (
+                _: React.SyntheticEvent<HTMLInputElement> | null,
+                value?: string,
+                originalDate?: Date | string | null,
+                isoDate?: string,
+            ) => {
+                setDate(value);
+                setOriginalDate(originalDate);
+                setIsoDate(isoDate);
+            };
+
+            return (
+                <div style={{ display: 'flex', flexDirection: 'column', gap: '3rem'}}>
+                    <div style={{ display: 'flex', flexDirection: 'column', gap: '0.25rem'}}>
+                        <p>Значение date: {String(dateValue)}</p>
+                        <p>Значение originalDate: {String(originalDateValue)}</p>
+                        <p>Значение isoDate: {isoDateValue}</p>
+                    </div>
+
+                    <DatePicker
+                        onChangeValue={handleChangeValue}
+                        onCommitDate={console.log}
+                        label="Неконтролируемый DatePicker"
+                        format="DD.MM.YYYY"
+                        maskWithFormat
+                        lang="ru"
+                        contentRight={<IconDone size="s" />}
+                        placement="bottom"
+                        usePortal
+                    />
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+    <TabItem value="controlled" label="Controlled">
+        ```tsx live
+        import React, {useState} from 'react';
+        import { DatePicker } from '@salutejs/sdds-crm';
+        import { IconDone } from '@salutejs/plasma-icons';
+
+        export function App() {
+            const [dateValue, setDate] = useState<Date | string | undefined>(new Date());
+            const [originalDateValue, setOriginalDate] = useState<Date | string | null | undefined>(new Date());
+            const [isoDateValue, setIsoDate] = useState<string | undefined>(new Date().toISOString());
+
+            const handleChangeValue = (
+                _: React.SyntheticEvent<HTMLInputElement> | null,
+                value?: string,
+                originalDate?: Date | string | null,
+                isoDate?: string,
+            ) => {
+                setDate(value);
+                setOriginalDate(originalDate);
+                setIsoDate(isoDate);
+            };
+
+            return (
+                <div style={{ display: 'flex', flexDirection: 'column', gap: '3rem'}}>
+                    <div style={{ display: 'flex', flexDirection: 'column', gap: '0.25rem'}}>
+                        <p>Значение date: {String(dateValue)}</p>
+                        <p>Значение originalDate: {String(originalDateValue)}</p>
+                        <p>Значение isoDate: {isoDateValue}</p>
+                    </div>
+
+                    <DatePicker
+                        value={dateValue}
+                        onChangeValue={handleChangeValue}
+                        onCommitDate={console.log}
+                        label="Контролируемый DatePicker"
+                        format="DD.MM.YYYY"
+                        lang="ru"
+                        contentRight={<IconDone size="s" />}
+                        placement="bottom"
+                        usePortal
+                        maskWithFormat
+                    />
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+</Tabs>
+
+### Управление внешним видом
+
+Внешний вид компонента зависит от свойств `appearance`, `size`:
+
+<Tabs>
+    <TabItem value="appearance" label="Appearance" default>
+        Для `appearance="clear"` есть возможность отобразить разделитель с помощью `hasClearDivider`
+
+        ```tsx live
+        import React from 'react';
+        import { DatePicker } from '@salutejs/sdds-crm';
+        import { IconDone } from '@salutejs/plasma-icons';
+
+        export function App() {
+            return (
+                <div style={{ display: 'flex', gap: '3rem', flexWrap: 'wrap' }}>
+                    <DatePicker
+                        appearance="default"
+                        label="Appearance default"
+                        leftHelper="Подсказка к полю"
+                        placeholder="Введите дату"
+                        contentRight={<IconDone size="s" />}
+                        usePortal
+                    />
+                    <DatePicker
+                        appearance="clear"
+                        hasClearDivider
+                        label="Appearance clear"
+                        leftHelper="Подсказка к полю"
+                        placeholder="Введите дату"
+                        contentRight={<IconDone size="s" />}
+                        usePortal
+                    />
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+    <TabItem value="size" label="Size">
+        Размер `DatePicker` задаётся с помощью свойства `size`.
+        Возможные значения свойства: `"l"`, `"m"`, `"s"`, `"xs"`.
+
+        ```tsx live
+        import React from 'react';
+        import { DatePicker } from '@salutejs/sdds-crm';
+        import { IconDone } from '@salutejs/plasma-icons';
+
+        export function App() {
+            const sizes = ['l', 'm', 's', 'xs']
+
+            return (
+                <div style={{ display: 'flex', flexDirection: 'column', gap: '2rem' }}>
+                    {sizes.map((size) => (
+                        <DatePicker
+                            key={size}
+                            size={size}
+                            label={`Size ${size}`}
+                            leftHelper="Подсказка к полю"
+                            placeholder="Введите дату"
+                            contentRight={<IconDone size="s" />}
+                            usePortal
+                        />
+                    ))}
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+</Tabs>
 
 ### Формат даты
+
 Формат даты задается с помощью свойства `format`.
 | Обозначение | Отображение                           | Описание                         |
 |-------------|---------------------------------------|----------------------------------|
@@ -111,7 +251,8 @@ export function App() {
 }
 ```
 
-### Валидация и индикация успешного ввода даты.
+### Валидация и индикация успешного ввода даты
+
 За индикацию ошибки или успешного ввода отвечают `valueError`, `valueSuccess`.
 В данном примере валидация происходит при нажатии клавиши `Enter` после ввода значений:
 
@@ -168,9 +309,9 @@ export function App() {
 Наличие индикатора регулируется свойством `hasRequiredIndicator`.
 :::
 
-Обязательность поля задаётся с помощью свойства `required`. 
-Если поле является обязательным, то у компонента появляется специальный индикатор. 
-Изменить расположение индикатора можно с помощью свойства `requiredPlacement`, которое принимает значения `left` и `right`. 
+Обязательность поля задаётся с помощью свойства `required`.
+Если поле является обязательным, то у компонента появляется специальный индикатор.
+Изменить расположение индикатора можно с помощью свойства `requiredPlacement`, которое принимает значения `left` и `right`.
 
 ```tsx live
 import React from 'react';
@@ -194,6 +335,7 @@ export function App() {
                 placeholder="Введите дату"
                 format="DD MMMM YYYY"
                 contentRight={<ActionButton />}
+                hasRequiredIndicator
                 required
                 requiredPlacement="right"
             />
@@ -316,7 +458,7 @@ import { DatePicker } from '@salutejs/sdds-crm';
                 placeholder="Введите дату"
                 format="DD MMMM YYYY"
                 eventList={events}
-                eventTooltipOptions={{ 
+                eventTooltipOptions={{
                     bodyWrapper: EventTooltipBody,
                     size: 'm'
                 }}
@@ -329,103 +471,91 @@ import { DatePicker } from '@salutejs/sdds-crm';
 
 ## DatePickerRange
 <Description name="DatePickerRange" />
-<PropsTable name="DatePickerRange" exclude={['css']} />
+
+### Быстрый старт
 
 Компонент `DatePickerRange` представляет собой `Range` с выпадающим календарем.
 Календарь может быть одиночным или двойным. За это отвечает свойство `isDoubleCalendar`.
 
-```tsx live
-import React from 'react';
-import { DatePickerRange, IconButton } from '@salutejs/sdds-crm';
-import { IconDone } from '@salutejs/plasma-icons';
-
-export function App() {
-    const ActionButton = () => {
-        return (
-            <IconButton view="clear" size="l">
-                <IconDone size="s" />
-            </IconButton>
-        );
-    };
-
-    return (
-        <div>
-            <DatePickerRange
-                size="l"
-                label="Лейбл"
-                leftHelper="Подсказка к полю"
-                firstPlaceholder="Введите дату 1"
-                secondPlaceholder="Введите дату 2"
-                contentRight={<ActionButton />}
-                isDoubleCalendar
-                usePortal
-            />
-        </div>
-    );
-}
-```
-
-## Контролируемый вариант компонента
-
 <Tabs>
-    <TabItem value="default" label="DatePicker" default>
-        Для передачи текущего значения необходимо использовать свойство `value`. 
-        Чтобы отслеживать изменения, полученные в поле ввода необходимо использовать `onChangeValue`.
-        Свойство `onCommitDate` вызывается, когда выбор даты сделан с помощью выпадающего календарая 
-        или же в поле ввода введена корректная дата.
-
+    <TabItem value="uncontrolled" label="Uncontrolled" default>
         ```tsx live
         import React, {useState} from 'react';
-        import { DatePicker } from '@salutejs/sdds-crm';
+        import { DatePickerRange, IconButton } from '@salutejs/sdds-crm';
         import { IconDone } from '@salutejs/plasma-icons';
 
-        export function App() {
-            const [dateValue, setDate] = useState<Date | string | undefined>(new Date());
-            const [originalDateValue, setOriginalDate] = useState<Date | string | null | undefined>(new Date());
-            const [isoDateValue, setIsoDate] = useState<string | undefined>(new Date().toISOString());
+        type DateType = Date | string | undefined | null
 
-            const handleChangeValue = (
+        export function App() {
+            const [dateValue, setDate] = useState<[DateType, DateType]>([new Date(), null]);
+            const [originalDateValue, setOriginalDate] = useState<[DateType, DateType]>([new Date(), null]);
+            const [isoDateValue, setIsoDate] = useState<[string?, string?]>([new Date().toISOString(), '']);
+
+            const valueSetter = <T extends unknown, P extends React.Dispatch<React.SetStateAction<any>>>(
+                value: T,
+                sideOfDate: 'start' | 'end',
+                setter: P,
+            ) => {
+                setter((prevValue) => {
+                    if (sideOfDate === 'start') {
+                        return [value, prevValue[1]];
+                    }
+
+                    return [prevValue[0], value];
+                });
+            };
+
+            const handleChangeValue = (sideOfDate: 'start' | 'end') => (
                 _: React.SyntheticEvent<HTMLInputElement> | null,
                 value?: string,
                 originalDate?: Date | string | null,
                 isoDate?: string,
             ) => {
-                setDate(value);
-                setOriginalDate(originalDate);
-                setIsoDate(isoDate);
+                valueSetter(value, sideOfDate, setDate);
+                valueSetter(originalDate, sideOfDate, setOriginalDate);
+                valueSetter(isoDate, sideOfDate, setIsoDate);
+            };
+
+            const ActionButton = () => {
+                return (
+                    <IconButton view="clear" size="l">
+                        <IconDone size="s" />
+                    </IconButton>
+                );
             };
 
             return (
-                <div style={{ display: 'flex', flexDirection: 'column', gap: '3rem'}}>
-                    <div style={{ display: 'flex', flexDirection: 'column', gap: '0.25rem'}}>
-                        <p>Значение date: {String(dateValue)}</p>
-                        <p>Значение originalDate: {String(originalDateValue)}</p>
-                        <p>Значение isoDate: {isoDateValue}</p>
+                <div style={{ display: 'flex', flexDirection: 'column', gap: '3rem' }}>
+                    <div style={{ display: 'flex', flexDirection: 'column', gap: '0.25rem' }}>
+                        <p>Значение date:<br/> {dateValue.map(String).join(' --- ')}</p>
+                        <p>Значение originalDate:<br/> {originalDateValue.map(String).join(' --- ')}</p>
+                        <p>Значение isoDate:<br/> {isoDateValue.join(' --- ')}</p>
                     </div>
 
-                    <DatePicker
-                        value={dateValue}
-                        onChangeValue={handleChangeValue}
-                        onCommitDate={console.log}
-                        label="Контролируемый DatePicker"
+                    <DatePickerRange
+                        onChangeFirstValue={handleChangeValue('start')}
+                        onChangeSecondValue={handleChangeValue('end')}
+                        onCommitFirstDate={console.log}
+                        onCommitSecondDate={console.log}
+                        label="Неконтролируемый RangeDatePicker"
                         format="DD.MM.YYYY"
                         lang="ru"
-                        contentRight={<IconDone size="s" />}
                         placement="bottom"
+                        isDoubleCalendar
                         usePortal
                         maskWithFormat
+                        size="l"
+                        leftHelper="Подсказка к полю"
+                        firstPlaceholder="Введите дату 1"
+                        secondPlaceholder="Введите дату 2"
+                        contentRight={<ActionButton />}
                     />
                 </div>
             );
         }
         ```
     </TabItem>
-    <TabItem value="range" label="DatePickerRange">
-        Для передачи текущего значения необходимо использовать свойство `value` - принимает массив из двух значений. 
-        Чтобы отслеживать изменения, полученные в полях ввода необходимо использовать `onChangeFirstValue` и `onChangeSecondValue` соответственно.
-        Свойства `onCommitFirstDate` вызывается для первого значения, а `onCommitSecondDate` для второго, когда выбор даты сделан с помощью выпадающего календарая 
-        или же в соответствующем поле ввода введена корректная дата.
-
+    <TabItem value="controlled" label="Controlled">
         ```tsx live
         import React, {useState} from 'react';
         import { DatePickerRange } from '@salutejs/sdds-crm';
@@ -491,3 +621,159 @@ export function App() {
         ```
     </TabItem>
 </Tabs>
+
+### Управление внешним видом
+
+Внешний вид компонента зависит от свойств `appearance`, `size`, `isDoubleCalendar`:
+
+<Tabs>
+    <TabItem value="appearance" label="Appearance" default>
+        Для `appearance="clear"` есть возможность отобразить разделитель с помощью `hasClearDivider`
+
+        ```tsx live
+        import React from 'react';
+        import { DatePickerRange, IconButton } from '@salutejs/sdds-crm';
+        import { IconDone } from '@salutejs/plasma-icons';
+
+        export function App() {
+            const ActionButton = () => {
+                return (
+                    <IconButton view="clear" size="l">
+                        <IconDone size="s" />
+                    </IconButton>
+                );
+            };
+
+            return (
+                <div style={{ display: 'flex', flexDirection: 'column', gap: '3rem' }}>
+                    <DatePickerRange
+                        appearance="default"
+                        size="l"
+                        label="Appearance default"
+                        leftHelper="Подсказка к полю"
+                        firstPlaceholder="Введите дату 1"
+                        secondPlaceholder="Введите дату 2"
+                        contentRight={<ActionButton />}
+                        isDoubleCalendar
+                        usePortal
+                    />
+                    <DatePickerRange
+                        appearance="clear"
+                        size="l"
+                        label="Appearance clear"
+                        leftHelper="Подсказка к полю"
+                        firstPlaceholder="Введите дату 1"
+                        secondPlaceholder="Введите дату 2"
+                        contentRight={<ActionButton />}
+                        isDoubleCalendar
+                        usePortal
+                    />
+                    <DatePickerRange
+                        appearance="clear"
+                        hasClearDivider
+                        size="l"
+                        label="Appearance clear с разделителем"
+                        leftHelper="Подсказка к полю"
+                        firstPlaceholder="Введите дату 1"
+                        secondPlaceholder="Введите дату 2"
+                        contentRight={<ActionButton />}
+                        isDoubleCalendar
+                        usePortal
+                    />
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+    <TabItem value="size" label="Size">
+        Размер `DatePickerRange` задаётся с помощью свойства `size`.
+        Возможные значения свойства: `"l"`, `"m"`, `"s"`, `"xs"`.
+
+        ```tsx live
+        import React from 'react';
+        import { DatePickerRange, IconButton } from '@salutejs/sdds-crm';
+        import { IconDone } from '@salutejs/plasma-icons';
+
+        export function App() {
+            const sizes = ['l', 'm', 's', 'xs']
+
+            const ActionButton = () => {
+                return (
+                    <IconButton view="clear" size="l">
+                        <IconDone size="s" />
+                    </IconButton>
+                );
+            };
+
+            return (
+                <div style={{ display: 'flex', flexDirection: 'column', gap: '2rem' }}>
+                    {sizes.map((size) => (
+                        <DatePickerRange
+                            key={size}
+                            size={size}
+                            label={`Size ${size}`}
+                            leftHelper="Подсказка к полю"
+                            firstPlaceholder="Введите дату 1"
+                            secondPlaceholder="Введите дату 2"
+                            contentRight={<ActionButton />}
+                            isDoubleCalendar
+                            usePortal
+                        />
+                    ))}
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+    <TabItem value="calendar" label="isDoubleCalendar">
+        Календарь может быть одиночным или двойным. За это отвечает свойство `isDoubleCalendar`.
+
+        ```tsx live
+        import React from 'react';
+        import { DatePickerRange, IconButton } from '@salutejs/sdds-crm';
+        import { IconDone } from '@salutejs/plasma-icons';
+
+        export function App() {
+            const ActionButton = () => {
+                return (
+                    <IconButton view="clear" size="l">
+                        <IconDone size="s" />
+                    </IconButton>
+                );
+            };
+
+            return (
+                <div style={{ display: 'flex', flexDirection: 'column', gap: '3rem' }}>
+                    <DatePickerRange
+                        size="l"
+                        label="Одиночный календарь"
+                        leftHelper="Подсказка к полю"
+                        firstPlaceholder="Введите дату 1"
+                        secondPlaceholder="Введите дату 2"
+                        contentRight={<ActionButton />}
+                        usePortal
+                    />
+                    <DatePickerRange
+                        size="l"
+                        label="Двойной календарь"
+                        leftHelper="Подсказка к полю"
+                        firstPlaceholder="Введите дату 1"
+                        secondPlaceholder="Введите дату 2"
+                        contentRight={<ActionButton />}
+                        isDoubleCalendar
+                        usePortal
+                    />
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+</Tabs>
+
+## Props
+
+### DatePicker
+<PropsTable name="DatePicker" exclude={['css']} />
+
+### DatePickerRange
+<PropsTable name="DatePickerRange" exclude={['css']} />
